--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -18,7 +18,11 @@
     justify-content:space-between;
     align-items: flex-start;
 }
-.btnNext
+.email, .password
+{
+    width: 100%;
+}
+.btnsave
 {
     background-color: #1877f2;
     border-radius: 6px;
@@ -28,7 +32,39 @@
 {
     padding-left: 70%;
 }
+.showPassword
+{
+    padding-bottom: 10px;
+}
+.forgetemail
+{
+    flex-direction: row;
+    gap: 15px;
+    
+    padding-right: 25%;
+    color: dodgerblue;
+}
+.forgetpassword
+{
+    padding-left: 10%;
+}
+.forgetpassword, .learn,.create
+{
+    padding: 0.3rem;
+    color: dodgerblue;
+}
+.create
+{
+    padding-right: 30%;
+    color: dodgerblue;
+}
 .form-head
 {
     padding:10px 35% 10px ;
+}
+.head-form
+{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 24%;
 }
