--- a/src/app/Components/registration/registration.component.html
+++ b/src/app/Components/registration/registration.component.html
@@ -1,70 +1,68 @@
-<body>
-    <header>
-
-        <div class="container">
-            <div class="left">
-                <img src="../../../assets/FundooLogo.png" alt="">
-                <div>
-                    <h1>Create your Fundoo Account</h1>
+<div class="layout">
+    <div class="container">
+        <div class="reg-container">
+            <div class="form-head">
+                <div fxLayout="row" style="font-weight:500">
+                    <span style="font-size: 30px ; color: #4285F4">F</span>
+                    <span style="font-size: 30px ; color: #EA4335">u</span>
+                    <span style="font-size: 30px ; color: #FBBC05">n</span>
+                    <span style="font-size: 30px ; color: #4285F4">d</span>
+                    <span style="font-size: 30px ; color: #34A853">o</span>
+                    <span style="font-size: 30px ; color: #EA4335">o</span>
                 </div>
+            </div>
+            <div class='form-account'>
+                <h1>Create your Fundoo Account</h1>
+            </div>
+            <div>
                 <form>
-                    <div class="f-l-name">
-                        <p>
-                            <mat-form-field appearance="outline">
-                                <mat-label>FirstName</mat-label>
-                                <input matInput placeholder="FirstName">
-                            </mat-form-field>
-                        </p>
-                        <p>
-                            <mat-form-field appearance="outline">
-                                <mat-label>LastName</mat-label>
-                                <input matInput placeholder="Lastname">
-                            </mat-form-field>
-                        </p>
+                    <div class="form-group" fxLayout="row" fxLayout.lt-lg="column" fxLayout.lt-lg="column">
+                        <mat-form-field appearance="outline" class="form-field">
+                            <mat-label>First Name</mat-label>
+                            <input matInput type="text" placeholder="First Name" formControlName="firstName">
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" class="form-field">
+                            <mat-label>Last Name</mat-label>
+                            <input matInput placeholder="Last Name">
+                        </mat-form-field>
                     </div>
-                    <div>
-                        <p>
-                            <mat-form-field appearance="outline" class="usernameclass">
-                                <mat-label>Username</mat-label>
-                                <input matInput placeholder="Username">
-                                <mat-icon matSuffix>@gmail.com</mat-icon>
-                                <mat-hint><h3>you can use letter, numbers & periods</h3></mat-hint>
-                            </mat-form-field>
-                        </p>
+                    <div class="form-group">
+                        <mat-form-field appearance="outline" class="form-field">
+                            <mat-label>Username</mat-label>
+                            <input matInput type="email" placeholder="Enter Username">
+                            <min-icon matSuffix>@gmail.com</min-icon>
+                            <mat-hint>You can use letters, numbers & periods</mat-hint>
+                        </mat-form-field>
                     </div>
-                    <a class="currentEmail" mat-button href="" target="_blank">Use my current email instead</a>
-                    <div class="pwdInput">
-                        <p>
-                            <mat-form-field appearance="outline">
-                                <mat-label>Password</mat-label>
-                                <input matInput type="password" placeholder="Password">
-                            </mat-form-field>
-                        </p>
-                        <p>
-                            <mat-form-field appearance="outline">
-                                <mat-label>ConfirmPassword</mat-label>
-                                <input matInput type="password" placeholder="ConfirmPassword">
-                                
-                            </mat-form-field>
-                        </p>
+                    <div class="form-group form-field">
+                        <a class="btn-instead">Use my current email insted</a>
                     </div>
-                    <mat-hint><h3>Use 8 or more characters with a mix of letters, numbers & symbols</h3></mat-hint>
-                    <div></div>
-                    <div class="showPassword">
-                        <input type="checkbox">
-                        <label>Show Password</label>
+                    <div class="form-group" fxLayout="row" fxLayout.lt-lg="column" fxLayout.lt-lg="column">
+                        <mat-form-field appearance="outline" class="form-field">
+                            <mat-label>Password</mat-label>
+                            <input matInput type="password" placeholder="Password">
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" class="form-field">
+                            <mat-label>Confirm Password</mat-label>
+                            <input matInput type="password" placeholder="Confirm Password">
+                        </mat-form-field>
                     </div>
-                    <div class="btn-div">
-                        <a class="instead" mat-button href="" target="_blank">Sign in instead</a>
-                        <button class="btnsave" mat-flat-button color="primary">Save</button>
+                        <p><mat-hint>Use 8 or more characters with a mix of letters, numbers & symbols</mat-hint></p>
+                    <div class="form-group form-field">
+                        <section class="example-section">
+                            <mat-checkbox class="example-margin">Show Password</mat-checkbox>
+                        </section>
+                    </div>
+                    <div class="form-group buttons">
+                        <button mat-button class="btn-instead" routerLink="/login">Sign in instesd</button>
+                        <button mat-raised-button type="submit" class="btn-signup" color="primary">Signup</button>
                     </div>
                 </form>
             </div>
-            <div class="right">
-                <img src="../../../assets/account.svg" alt="">
-                <h2><p>One accout.All of Fundoo working for you</p></h2>
-            </div>
         </div>
-
-    </header>
-</body>
+        <div class="image" fxLayout="column" fxLayoutAlign="center center" fxHide fxShow.gt-sm>
+            <img src="../../../assets/account.svg" alt="" width="244" height="244">
+            <div class="imgtext">One account. All of Fundoo working for you.</div>
+        </div>
+    </div>
+</div>
