--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<router-outlet></router-outlet>
+
 <!-- <app-registration>app-registration</app-registration> -->
 <!-- <app-login>app-login</app-login> -->
 <!-- <app-forget-password>app-forget-password</app-forget-password> -->
-<app-reset-password>app-reset-password</app-reset-password>
+<!-- <app-reset-password>app-reset-password</app-reset-password> -->
