implementing routing & flexLayout for forgotpassword page

--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -1,8 +1,7 @@
-<form class="form">
-
+<div class="forget-layout">
     <div class="container">
-        <div class="emailpassword">
-            <div class="form-head">
+        <div class="forget-container">
+            <div class="form-head" fxLayout="column" fxLayoutAlign=" center">
                 <div fxLayout="row" style="font-weight:500">
                     <span style="font-size: 30px ; color: #4285F4">F</span>
                     <span style="font-size: 30px ; color: #EA4335">u</span>
@@ -11,23 +10,26 @@
                     <span style="font-size: 30px ; color: #34A853">o</span>
                     <span style="font-size: 30px ; color: #EA4335">o</span>
                 </div>
+                <div class='form-account' fxLayout="column" fxLayoutAlign=" center">
+                    <span>
+                        <h1>Find your account</h1>
+                    </span>
+                    <span>Enter your phone number or recovery email</span>
+                </div>
             </div>
-            <div class="head-form">
-                <h2>Find your Fundoo account</h2>
-            </div>
-            <div>
-                <h3>Enter your Email to recover</h3>
-            </div>
-            <p>
-                <mat-form-field class="email" appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput placeholder="Email">
-                </mat-form-field>
-            </p>
-            <div class="btn-div">
-                <button class="btnNext" mat-flat-button color="primary">Next</button>
-            </div>
+            <form>
+                <div class="form-group form-container" fxLayout="column">
+                    <mat-form-field appearance="outline" class="form-field">
+                        <mat-label>Email</mat-label>
+                        <input matInput type="email" placeholder="Enter email" formControlName="email"> 
+                    </mat-form-field>
+                </div>
+                <div>
+                    <div class="form-group buttons" fxLayoutGap="10px">
+                        <button class="btnNext" mat-flat-button routerLink="/resetpassword" color="primary">Next</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-
-</form>
+</div>
