--- a/src/app/Components/forget-password/forget-password.component.scss
+++ b/src/app/Components/forget-password/forget-password.component.scss
@@ -1,34 +1,72 @@
-.form
+.forget-layout
 {
-    width: 100vw;
-    min-height: 100vh;
-    justify-content: center;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    padding-left: 15%;
+    padding-right: 20%;
 }
 .container
 {
-    padding: 2rem;
-    border: 1px solid black;
-    border-radius: 6px;
-    max-width: 300px;
-    max-height: 650px;
-    background-color: white;
     display: flex;
-    justify-content:space-between;
-    align-items: flex-start;
+    justify-content: center;
+    padding: 40px 25px 100px;
+    border: 1px solid lightgray;
+    box-shadow: 0px 0px 10px #00000029;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+.form-head 
+{
+    padding: 15px;
+    text-transform: capitalize;
+}
+.form-account
+{
+    padding-top: 20px;
+}
+.form-container
+{
+    padding: 10px;
+}
+.form-group
+{
+    display: flex;
+    justify-content:flex-start; 
+    margin-bottom: 10px;
+}
+.showPassword
+{
+    padding-top: 10px;
+}
+.btn-basic
+{
+    font-weight: 500;
+    color: #1a73e8;
+    padding: 10px;
+    border: none;
+}
+
+.form-field
+{
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.buttons
+{
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    padding-left: 82%;
+    width: 60%;
 }
 .btnNext
 {
-    background-color: #1877f2;
-    border-radius: 6px;
+    color: white;   
+    background-color: #1a73e8;
+    border: none;
+    border-radius: 7px;
     width: 30%;
-}
-.btn-div
-{
-    padding-left: 70%;
-}
-.form-head
-{
-    padding:10px 35% 10px ;
 }
