implementing routing & flexLayout for ForgorPassword page

--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -1,8 +1,7 @@
-<form class="form">
-
+<div class="reset-layout">
     <div class="container">
-        <div class="emailpassword">
-            <div class="form-head">
+        <div class="reset-container">
+            <div class="form-head" fxLayout="column" fxLayoutAlign=" center">
                 <div fxLayout="row" style="font-weight:500">
                     <span style="font-size: 30px ; color: #4285F4">F</span>
                     <span style="font-size: 30px ; color: #EA4335">u</span>
@@ -11,29 +10,36 @@
                     <span style="font-size: 30px ; color: #34A853">o</span>
                     <span style="font-size: 30px ; color: #EA4335">o</span>
                 </div>
-            </div>
-            <p class="head-form">Reset Password</p>
-            <p>
-                <mat-form-field class="email" appearance="outline">
-                    <mat-label>New Password</mat-label>
-                    <input type="password" matInput placeholder="New Password">
-                </mat-form-field>
-                <mat-form-field class="password" appearance="outline">
-                    <mat-label>Confirm Password</mat-label>
-                    <input type="password" matInput placeholder="Confirm Password">
-                </mat-form-field>
-            </p>
-            <div class="showPassword">
-                <input type="checkbox">
-                <label>Show Password</label>
-            </div>
-                <mat-hint>
-                    <h3>Not your computer? Use Guest mode to sign in privately</h3>
-                </mat-hint>
-                <div class="btn-div">
-                    <button class="btnsave" mat-flat-button color="primary">Save</button>
+                <div class='form-reset'>
+                    <span><h1>Reset Password</h1></span>   
                 </div>
             </div>
+            <form>
+                <div class="form-group form-container" fxLayout="column">
+                    <mat-form-field appearance="outline" class="form-field">
+                        <mat-label>New password</mat-label>
+                        <input matInput type="password" placeholder="Enter new password">
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" class="form-field">
+                        <mat-label>Confirn new password</mat-label>
+                        <input matInput type="password" placeholder="Confirm new password">
+                    </mat-form-field>
+                    <mat-hint>
+                        <h3>Use 8 or more characters with a mix of letters, numbers & symbols</h3>
+                    </mat-hint>
+                </div>
+                <div class="showPassword">
+                    <input type="checkbox">
+                    <label>Show Password</label>
+                </div>
+                <div>
+                    <div class="form-group buttons" fxLayoutGap="10px">
+                        <button class="btnSave" mat-flat-button routerLink="/login" color="primary">Save</button>
+                    </div>
+                </div>
+            </form>
         </div>
+    </div>
+</div>
 
-</form>
+
