--- a/src/app/Components/reset-password/reset-password.component.scss
+++ b/src/app/Components/reset-password/reset-password.component.scss
@@ -1,70 +1,143 @@
-.form
+.reset-layout
 {
-    width: 100vw;
-    min-height: 100vh;
-    justify-content: center;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    padding-left: 15%;
+    padding-right: 25%;
 }
 .container
 {
-    padding: 2rem;
-    border: 1px solid black;
-    border-radius: 6px;
-    max-width: 300px;
-    max-height: 650px;
-    background-color: white;
     display: flex;
-    justify-content:space-between;
-    align-items: flex-start;
+    justify-content: center;
+    padding: 10px 40px 10px 40px;
+    border: 1px solid lightgray;
+    box-shadow: 0px 0px 10px #00000029;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-top: 65px;
+    margin-bottom: 40px;
+
 }
-.email, .password
+.form-head 
 {
-    width: 100%;
+    padding: 15px;
+    text-transform: capitalize;
 }
-.btnsave
+.form-reset
 {
-    background-color: #1877f2;
-    border-radius: 6px;
-    width: 30%;
+    padding-top: 20px;
 }
-.btn-div
+.form-container
 {
-    padding-left: 70%;
+    padding: 10px;
+}
+.form-group
+{
+    display: flex;
+    justify-content:flex-start; 
+    margin-bottom: 10px;
 }
 .showPassword
 {
-    padding-bottom: 10px;
-}
-.forgetemail
-{
-    flex-direction: row;
-    gap: 15px;
-    
-    padding-right: 25%;
-    color: dodgerblue;
-}
-.forgetpassword
-{
-    padding-left: 10%;
-}
-.forgetpassword, .learn,.create
-{
-    padding: 0.3rem;
-    color: dodgerblue;
-}
-.create
-{
-    padding-right: 30%;
-    color: dodgerblue;
-}
-.form-head
-{
-    padding:10px 35% 10px ;
-}
-.head-form
-{
     padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 24%;
 }
+.btn-basic
+{
+    font-weight: 500;
+    color: #1a73e8;
+    padding: 10px;
+    border: none;
+}
+.mat-hint
+{ padding-top: 5px;
+    font-size: small;
+    font-size: 12px;   
+}
+.form-field
+{
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.buttons
+{
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+
+    padding-left: 82%;
+    width: 60%;
+}
+.btnSave
+{
+    color: white;   
+    background-color: #1a73e8;
+    border: none;
+    border-radius: 6px;
+    width: 30%;
+
+}
+
+
+// .form
+// {
+//     width: 100vw;
+//     min-height: 100vh;
+//     justify-content: center;
+//     display: flex;
+//     align-items: center;
+// }
+// .container
+// {
+//     padding: 2rem;
+//     border: 1px solid black;
+//     border-radius: 6px;
+//     max-width: 300px;
+//     max-height: 650px;
+//     background-color: white;
+//     display: flex;
+//     justify-content:space-between;
+//     align-items: flex-start;
+// }
+// .new, .password
+// {
+//     width: 100%;
+// }
+// .btnNext
+// {
+//     background-color: #1877f2;
+//     border-radius: 6px;
+//     width: 30%;
+//     flex-direction: row;
+//     gap: 15px;
+//     justify-content:space-between;
+//     align-items: center;    
+    
+// }
+// .form-head
+// {
+//     padding:10px 35% 10px ;
+// }
+// .head-form
+// {
+//     padding-top: 10px;
+//     padding-bottom: 10px;
+//     padding-left: 30%;
+//     font-size:large;
+// }
+// .btnsave
+// {
+    
+    // background-color: #1877f2;
+    // border-radius: 6px;
+    // width:30%;
+    // flex-direction: row;
+    // gap: 15px;
+    // justify-content:space-between;
+    // align-items: center;    
+// }
+// .btn-div
+// {
+    // padding-left: 79%;
+    // width: 30%;
+// }
