implementing routing & flexLayout for reserPassword page

--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
-<div class="layout">
+<div class="reset-layout">
     <div class="container">
-        <div class="log-container" >
+        <div class="reset-container">
             <div class="form-head" fxLayout="column" fxLayoutAlign=" center">
                 <div fxLayout="row" style="font-weight:500">
                     <span style="font-size: 30px ; color: #4285F4">F</span>
@@ -10,42 +10,36 @@
                     <span style="font-size: 30px ; color: #34A853">o</span>
                     <span style="font-size: 30px ; color: #EA4335">o</span>
                 </div>
-                <div class='form-account'>
-                    <span><h1>Your Fundoo Account</h1></span>   
+                <div class='form-reset'>
+                    <span><h1>Reset Password</h1></span>   
                 </div>
             </div>
             <form>
                 <div class="form-group form-container" fxLayout="column">
                     <mat-form-field appearance="outline" class="form-field">
-                        <mat-label>Email</mat-label>
-                        <input matInput type="email" placeholder="Enter email" >
+                        <mat-label>New password</mat-label>
+                        <input matInput type="password" placeholder="Enter new password">
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="form-field">
-                        <mat-label>Password</mat-label>
-                        <input matInput type="password" placeholder="Enter password" >
+                        <mat-label>Confirn new password</mat-label>
+                        <input matInput type="password" placeholder="Confirm new password">
                     </mat-form-field>
+                    <mat-hint>
+                        <h3>Use 8 or more characters with a mix of letters, numbers & symbols</h3>
+                    </mat-hint>
                 </div>
                 <div class="showPassword">
                     <input type="checkbox">
                     <label>Show Password</label>
                 </div>
-                <div class="form-group " fxLayoutGap="10px">
-                    <button mat-button class="btn-basic" routerLink="/">forget email?</button>
-                    <button mat-button class="btn-basic" routerLink="/forgetpassword">forget password?</button>
-                </div>
                 <div>
-                    <mat-hint>
-                        <h3>Not your computer? Use Guest mode to sign in privately</h3>
-                    </mat-hint>
                     <div class="form-group buttons" fxLayoutGap="10px">
-                        <button mat-button class="btn-basic" routerLink="/">Learn more</button>
-                    </div>
-                    <div class="form-group buttons" fxLayoutGap="10px">
-                        <button mat-button class="btn-basic" routerLink="/register">Create account</button>
-                        <button class="btnLogin" mat-flat-button color="primary">Login</button>
+                        <button class="btnSave" mat-flat-button routerLink="/login" color="primary">Save</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
+
+
