implementing Validations for all pages

--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -17,11 +17,12 @@
                     <span>Enter your phone number or recovery email</span>
                 </div>
             </div>
-            <form>
+            <form [formGroup]="forgetPwdForm" (ngSubmit)="onSubmit()" >
                 <div class="form-group form-container" fxLayout="column">
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>Email</mat-label>
-                        <input matInput type="email" placeholder="Enter email" formControlName="email"> 
+                        <input matInput type="email" placeholder="Enter email" formControlName="email">
+                        <mat-error>Enter valid email address</mat-error>
                     </mat-form-field>
                 </div>
                 <div>
