--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -14,15 +14,17 @@
                     <span><h1>Your Fundoo Account</h1></span>   
                 </div>
             </div>
-            <form>
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group form-container" fxLayout="column">
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>Email</mat-label>
-                        <input matInput type="email" placeholder="Enter email" >
+                        <input matInput type="email" placeholder="Enter email" formControlName="email">
+                        <mat-error>Enter Valid Email</mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>Password</mat-label>
-                        <input matInput type="password" placeholder="Enter password" >
+                        <input matInput type="password" placeholder="Enter password" formControlName="password">
+                        <mat-error>Enter Valid Password</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="showPassword">
