--- a/src/app/Components/registration/registration.component.html
+++ b/src/app/Components/registration/registration.component.html
@@ -15,23 +15,26 @@
                 <h1>Create your Fundoo Account</h1>
             </div>
             <div>
-                <form>
+                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                     <div class="form-group" fxLayout="row" fxLayout.lt-lg="column" fxLayout.lt-lg="column">
                         <mat-form-field appearance="outline" class="form-field">
                             <mat-label>First Name</mat-label>
                             <input matInput type="text" placeholder="First Name" formControlName="firstName">
+                            <mat-error>Enter First Name</mat-error>
                         </mat-form-field>
                         <mat-form-field appearance="outline" class="form-field">
                             <mat-label>Last Name</mat-label>
-                            <input matInput placeholder="Last Name">
+                            <input matInput placeholder="Last Name" formControlName="lastName">
+                            <mat-error>Enter Last Name</mat-error>
                         </mat-form-field>
                     </div>
                     <div class="form-group">
                         <mat-form-field appearance="outline" class="form-field">
                             <mat-label>Username</mat-label>
-                            <input matInput type="email" placeholder="Enter Username">
+                            <input matInput type="email" placeholder="Enter Username" formControlName="userName">
                             <min-icon matSuffix>@gmail.com</min-icon>
                             <mat-hint>You can use letters, numbers & periods</mat-hint>
+                            <mat-error>Choose Valid Username</mat-error>
                         </mat-form-field>
                     </div>
                     <div class="form-group form-field">
@@ -40,11 +43,13 @@
                     <div class="form-group" fxLayout="row" fxLayout.lt-lg="column" fxLayout.lt-lg="column">
                         <mat-form-field appearance="outline" class="form-field">
                             <mat-label>Password</mat-label>
-                            <input matInput type="password" placeholder="Password">
+                            <input matInput type="password" placeholder="Password" formControlName="password">
+                            <mat-error>Enter Password</mat-error>
                         </mat-form-field>
                         <mat-form-field appearance="outline" class="form-field">
                             <mat-label>Confirm Password</mat-label>
-                            <input matInput type="password" placeholder="Confirm Password">
+                            <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword">
+                            <mat-error>Enter Confirm Password</mat-error>
                         </mat-form-field>
                     </div>
                         <p><mat-hint>Use 8 or more characters with a mix of letters, numbers & symbols</mat-hint></p>
