--- a/src/app/Components/registration/registration.component.scss
+++ b/src/app/Components/registration/registration.component.scss
@@ -1,86 +1,98 @@
-header
-{
-    width: 100vw;
-    min-height: 100vh;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-}
-.f-l-name
+.layout
 {
     display: flex;
-    flex-direction: row;
-    gap: 15px;
+    justify-content: flex-start;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 .container
 {
-    padding: 2rem;
-    border: 1px solid black;
-    border-radius: 6px;
-    max-width: 900px;
-    max-height: 650px;
-    background-color: white;
     display: flex;
-    justify-content:space-between;
-    align-items: flex-start;
+    justify-content: center;
+    width: 90%;
+    padding: 15px;
+    border: 1px solid lightgray;
+    box-shadow: 0px 0px 10px #00000029;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
-.usernameclass
+.reg-container
 {
-    width: 100%;
+    display: flex;
+    min-width: 60%;
+    flex-direction: column;
 }
-.left
+.image
 {
-    flex-basis: 50%;
-}
-.right
-{
-    flex-basis: 50%;
-}
-.right img
-{
-    padding:150px 0px 25px 10px;
-}
-.left img
-{
-    align-items: center;
-    width:"4px";
-}
-.right p
-{
-    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
     text-align: center;
-    margin: auto;
-    max-width: 15rem;
+    color: #42515f;
+    font-size: larger;
+    padding-left: 50px;
+    padding-right: 50px;
 }
-.pwdInput
+.form-head
+{
+    text-transform: capitalize;
+    padding: 15px;
+}
+.form-account
+{
+    padding: 15px;
+}
+.form-group
 {
     display: flex;
-    flex-direction: row;
-    gap: 15px;
+    justify-content:flex-start; 
+    margin-bottom: 10px;
 }
-.currentEmail, .instead
+.mat-form-filed
 {
-    padding: 0.3rem;
-    color: dodgerblue;
+    width: min-content;
 }
-.btn-div
+mat-hint
 {
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
+    font-size: small;
+    font-size: 12px;
+    color: #1a73e8;
+    text-decoration: none;
+    padding-bottom: 20px;
 }
-.btn-div
+.form-field
 {
     width: 100%;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    margin-top: 2.5rem;
+    margin-left: 5px;
+    margin-right: 5px;
 }
-.btnsave
+mat-flat-button 
 {
-    background-color: #1877f2;
-    border-radius: 6px;
+    width: 100%;
+    border: none;
+    background-color: transparent;
+}
+.btn-instead
+{
+    font-weight: 500;
+    color: #1a73e8;
+    padding: 10px;
+    border: none;
+}
+.btn-signup
+{
+    color: white;
+    font-weight: 500;
+    background-color: #1a73e8;
+    padding: 10px;
+    border: none;
     width: 30%;
-
+}
+.buttons
+{
+    display: flex;
+    justify-content: space-between;
 }
