--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -14,15 +14,17 @@
                     <span><h1>Reset Password</h1></span>   
                 </div>
             </div>
-            <form>
+            <form [formGroup]="resetPwdForm" (ngSubmit)="onSubmit()">
                 <div class="form-group form-container" fxLayout="column">
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>New password</mat-label>
-                        <input matInput type="password" placeholder="Enter new password">
+                        <input matInput type="password" placeholder="Enter new password" formControlName="password">
+                        <mat-error>Enter New Password</mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>Confirn new password</mat-label>
-                        <input matInput type="password" placeholder="Confirm new password">
+                        <input matInput type="password" placeholder="Confirm new password" formControlName="confirnPassword">
+                        <mat-error>Enter Confirm Password</mat-error>
                     </mat-form-field>
                     <mat-hint>
                         <h3>Use 8 or more characters with a mix of letters, numbers & symbols</h3>
