implementing integration for ForgorPassword page

--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -17,7 +17,7 @@
                     <span>Enter your phone number or recovery email</span>
                 </div>
             </div>
-            <form [formGroup]="forgetPwdForm" (ngSubmit)="onSubmit()" >
+            <form [formGroup]="forgetPwdForm" (ngSubmit)="onSubmit()">
                 <div class="form-group form-container" fxLayout="column">
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>Email</mat-label>
@@ -25,9 +25,9 @@
                         <mat-error>Enter valid email address</mat-error>
                     </mat-form-field>
                 </div>
-                    <div class="form-group buttons" fxLayoutGap="10px">
-                        <button class="btnNext" mat-flat-button routerLink="/resetpassword" color="primary">Next</button>
-                    </div>
+                <div class="form-group buttons" fxLayoutGap="10px">
+                    <button class="btnNext" mat-flat-button color="primary">Next</button>
+                </div>
             </form>
         </div>
     </div>
