--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -23,7 +23,7 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="form-field">
                         <mat-label>Confirn new password</mat-label>
-                        <input matInput type="password" placeholder="Confirm new password" formControlName="confirnPassword">
+                        <input matInput type="password" placeholder="Confirm new password" formControlName="confirmPassword">
                         <mat-error>Enter Confirm Password</mat-error>
                     </mat-form-field>
                     <mat-hint>
@@ -36,7 +36,7 @@
                 </div>
                 <div>
                     <div class="form-group buttons" fxLayoutGap="10px">
-                        <button class="btnSave" mat-flat-button routerLink="/login" color="primary">Save</button>
+                        <button class="btnSave" mat-flat-button  color="primary">Save</button>
                     </div>
                 </div>
             </form>
