--- a/src/app/Components/get-all-notes/get-all-notes.component.html
+++ b/src/app/Components/get-all-notes/get-all-notes.component.html
@@ -1,3 +1,2 @@
 <app-create-notes></app-create-notes>
-<app-display-notes></app-display-notes>
-
+<app-display-notes [NotesList]="noteArray"></app-display-notes>
