--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -9,10 +9,10 @@
   <div fxLayoutAlign="start">
     <h1 class="example-app-name">
         <div fxLayout="row" style="font-weight:500">
-            <span style="font-size: 30px ; color: #4285F4">K</span>
-            <span style="font-size: 30px ; color: #EA4335">e</span>
-            <span style="font-size: 30px ; color: #FBBC05">e</span>
-            <span style="font-size: 30px ; color: #49f463">p</span>
+            <span style="font-size: 30px ;">K</span>
+            <span style="font-size: 30px ;">e</span>
+            <span style="font-size: 30px ;">e</span>
+            <span style="font-size: 30px ;">p</span>
         </div>
     </h1>
   
