implemented trash and archieve for notes

--- a/src/app/Components/display-notes/display-notes.component.html
+++ b/src/app/Components/display-notes/display-notes.component.html
@@ -11,7 +11,7 @@
         <!-- <div> {{notes.noteId}}</div> -->
       </div>
       <div class="row-in" style="flex-direction: row;">
-        <app-icons></app-icons>
+        <app-icons [notesCard]="notes"></app-icons>
       </div>
     </div>
   </div>
