--- a/src/app/Components/reset-password/reset-password.component.scss
+++ b/src/app/Components/reset-password/reset-password.component.scss
@@ -2,7 +2,7 @@
 {
     display: flex;
     justify-content: center;
-    padding-left: 15%;
+    padding-left: 25%;
     padding-right: 25%;
 }
 .container
@@ -16,7 +16,27 @@
     font-size: 16px;
     margin-top: 65px;
     margin-bottom: 40px;
-
+}
+@media screen and (min-width: 300px) and (max-width: 500px) {
+    .reset-layout
+{
+    //display: flex;
+    justify-content: center;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+.container
+{
+    //display: flex;
+    justify-content: center;
+    padding: 10px 40px 10px 40px;
+    border: 1px solid lightgray;
+    box-shadow: 0px 0px 10px #00000029;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 }
 .form-head 
 {
