--- a/src/app/Components/trash/trash.component.html
+++ b/src/app/Components/trash/trash.component.html
@@ -1,1 +1,1 @@
-<p>trash works!</p>
+<app-display-notes [NotesList]="trashArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
