--- a/src/app/Components/archive/archive.component.html
+++ b/src/app/Components/archive/archive.component.html
@@ -1,1 +1,1 @@
-<p>archive works!</p>
+<app-display-notes [NotesList]="archiveArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
