--- a/src/app/Components/forget-password/forget-password.component.scss
+++ b/src/app/Components/forget-password/forget-password.component.scss
@@ -17,6 +17,29 @@
     margin-top: 50px;
     margin-bottom: 40px;
 }
+@media screen and (min-width: 300px) and (max-width: 500px) {
+    .forget-layout
+{
+    display: flex;
+    justify-content: center;
+    //padding-left: 15%;
+    //padding-right: 20%;
+}
+.container
+{
+    width: 130%;
+    margin-top: 50%;
+    //display: flex;
+    //justify-content: center;
+    padding: 40px 25px 100px;
+    border: 1px solid lightgray;
+    box-shadow: 0px 0px 0px;
+    border-radius: 10px;
+    //font-size: 16px;
+    //margin-top: 50px;
+    //margin-bottom: 40px;
+}
+}
 .form-head 
 {
     padding: 15px;
