--- a/src/app/Components/get-all-notes/get-all-notes.component.html
+++ b/src/app/Components/get-all-notes/get-all-notes.component.html
@@ -1,2 +1,2 @@
-<app-create-notes></app-create-notes>
-<app-display-notes [NotesList]="noteArray"></app-display-notes>
+<app-create-notes (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-create-notes>
+<app-display-notes [NotesList]="noteArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
