--- a/src/app/Components/registration/registration.component.scss
+++ b/src/app/Components/registration/registration.component.scss
@@ -1,28 +1,56 @@
 .layout
 {
     display: flex;
-    justify-content: flex-start;
-    padding-left: 15%;
-    padding-right: 15%;
+    justify-content: center;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 .container
 {
     display: flex;
     justify-content: center;
-    width: 90%;
-    padding: 15px;
+    //width: 90%;
+    padding: 35px;
     border: 1px solid lightgray;
     box-shadow: 0px 0px 10px #00000029;
     border-radius: 10px;
     font-size: 16px;
     margin-top: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 .reg-container
 {
     display: flex;
     min-width: 60%;
     flex-direction: column;
+}
+@media screen and (min-width: 300px) and (max-width: 500px) {
+    .container
+    {
+        //display: flex;
+        //justify-content: center;
+        //width: 90%;
+        //padding: 35px;
+        border: 0px;
+        box-shadow: 0px 0px 0px ;
+        //border-radius: 10px;
+        font-size: 16px;
+        margin-top: 0px;
+       // margin-bottom: -30px;
+    }
+    .layout
+    {
+    //display: flex;
+    //justify-content: center;
+    padding-left: 0%;
+    padding-right: 0%;
+    }
+    .reg-container
+    {
+    //display: flex;
+    //min-width: 60%;
+    flex-direction: column;
+    }
 }
 .image
 {
@@ -48,7 +76,7 @@
 .form-group
 {
     display: flex;
-    justify-content:flex-start; 
+    justify-content:flex-start;
     margin-bottom: 10px;
 }
 .mat-form-filed
@@ -69,7 +97,7 @@ mat-hint
     margin-left: 5px;
     margin-right: 5px;
 }
-mat-flat-button 
+mat-flat-button
 {
     width: 100%;
     border: none;
